fix vertical spacing

--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,8 @@ body{
 header{
 	background: #50a3a2;
 	background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+	background: linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+	background: -webkit-gradient(linear, top left, #50a3a2 0%, #53e3a6 100%);
 	position: absolute;
 	left:0;
 	width:100%;
@@ -57,7 +59,7 @@ header{
 	background-color: fade(white, 15%);
 	color: #ecf0f1;
 	text-align: center;
-	line-height: 48px;
+	vertical-align: middle;
 	width: 48px;
 	height: 48px;
 	border: 1px solid fade(white, 30%);
